[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piexplorers"  # Replace 'piexplorers' with your desired package name
version = "0.1"  # Specify your package version

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry]
name = "piexplorers"  # Replace 'piexplorers' with your desired package name
version = "0.1"  # Specify your package version
description = "Your package description here"
authors = ["Your Name <your@email.com>"]